# demo

./: .env  README.md  main.py  poem.txt  pyproject.toml  pyvenv.cfg
